# doomnukem42

./: .gitignore  CMakeLists.txt  CMakeLists_example.txt  Makefile  README.md  test_map  test_map_2  test_map_3
includes/: doom_nukem.h
libft/: Makefile
libft/includes/: libft.h
libft/sources/: ft_delarr.c  ft_itoa.c  ft_memset.c
mp3_ogg_converter/: convert_audio.py  run.bat
png_sprite_converter/: convert_sprites.py  run.bat
sdl2/main/include/SDL2/: SDL_main.h
sources/: actions.c  animation_system.c  app.c  bmp_reader.c  clear_screen.c  clipping.c  collision.c  color.c  debug.c  decor.c  draw.c  draw_line.c  edge.c  editor.c  editor_draw.c  editor_inputs.c  errors.c  event_handling.c  events.c  fill_triangle.c  floor_collision.c  font.c  fpc_counter.c  game.c  game_data.c  gradient.c  grid.c  hit_fill.c  hud_image.c  init.c  init_sdl.c  inputs.c  intersect.c  keyboard_events.c  lists.c  live_mode_add.c  live_mode_inputs.c  live_mode_sector.c  live_mode_set.c  live_mode_toggle.c  (+46 more)
